force-app/main/default/objects/NEO_EducationalQualification__c/NEO_EducationalQualification__c.object-meta.xml
<CustomObject>
    <fullName>EducationalQualification__c</fullName>
    <label>Educational Qualification</label>
    <pluralLabel>Educational Qualifications</pluralLabel>
    <nameField>
        <label>Qualification Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel> <!-- Change to ControlledByParent -->
</CustomObject>