force-app/main/default/objects/NEO_EducationalQualification__c/fields/NEO_boardOrUniversity__c.field-meta.xml
<CustomField>
    <fullName>boardOrUniversity__c</fullName>
    <label>boardOrUniversity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>