force-app/main/default/objects/NEO_EducationalQualification__c/fields/NEO_branchTwelth__c.field-meta.xml
<CustomField>
    <fullName>branchTwelth__c</fullName>
    <label>branchTwelth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Science</fullName>
            </value>
            <value>
                <fullName>Commerce</fullName>
            </value>
            <value>
                <fullName>Arts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>