force-app/main/default/objects/NEO_EducationalQualification__c/fields/NEO_degree__c.field-meta.xml
<CustomField>
    <fullName>degree__c</fullName>
    <label>degree</label>
    <length>100</length>
    <type>Text</type>
</CustomField>