force-app/main/default/objects/NEO_EducationalQualification__c/fields/NEO_EqToEmp__c.field-meta.xml
<CustomField>
    <fullName>EqToEmp__c</fullName>
    <description>Educational Qualification to Employee relationship</description>
    <label>EqToEmp</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>EducationalQualifications</relationshipLabel>
    <relationshipName>EducationalQualifications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>