force-app/main/default/objects/NEO_EducationalQualification__c/fields/NEO_marksType__c.field-meta.xml
<CustomField>
    <fullName>marksType__c</fullName>
    <label>marksType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CGPA</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>