force-app/main/default/objects/NEO_EducationalQualification__c/fields/NEO_percentageMarks__c.field-meta.xml
<CustomField>
    <fullName>percentageMarks__c</fullName>
    <label>percentageMarks</label>
    <length>100</length>
    <type>Text</type>
</CustomField>