force-app/main/default/objects/NEO_EducationalQualification__c/fields/NEO_schoolOrCollegeName__c.field-meta.xml
<CustomField>
    <fullName>schoolOrCollegeName__c</fullName>
    <label>schoolOrCollegeName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>