force-app/main/default/objects/NEO_EducationalQualification__c/fields/NEO_specialisation__c.field-meta.xml
<CustomField>
    <fullName>specialisation__c</fullName>
    <label>specialisation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>