force-app/main/default/objects/NEO_EducationalQualification__c/fields/NEO_yearOfPassing__c.field-meta.xml
<CustomField>
    <fullName>yearOfPassing__c</fullName>
    <label>yearOfPassing</label>
    <length>100</length>
    <type>Text</type>
</CustomField>